# ARC-AGI-3-Agents

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  conftest.py  frame.json  generate_dataset.py  generate_dataset_parallel.py  llms.txt  main.py  pyproject.toml  pytest.ini  run.py  run_ls20.py  test_frame_metadata.py  test_local_simulator.py  view_dataset.py
agents/: README.md  __init__.py  agent.py  dataset.py  recorder.py  structs.py  swarm.py  tracing.py  utils.py  view_utils.py
agents/templates/: README.md  action_agent.py  langgraph_functional_agent.py  langgraph_random_agent.py  llm_agents.py  random_agent.py  reasoning_agent.py  smolagents.py
datasets/: ls20_20251202_180715.npz  ls20_20251202_180715_summary.json
docs/: LLM_GAME_ENGINE_INTEGRATION_FRAMEWORK.docx  LLM_GAME_ENGINE_INTEGRATION_FRAMEWORK.md  action-vs-object-centric.md  architecture.md  build_docx.py  formalism.tex  formalism_OOP_worldcoder.tex  oop-formalism.tex  oop-vs-monolithic.md  plan.md  proposal.md  run_locally.md
local_simulator/: README.md  __init__.py  mock_server.py  runner.py  web_viewer.py
local_simulator/core/: __init__.py  base_game.py  game_object.py  renderer.py
local_simulator/games/: __init__.py  ice_sliding.py  simple_maze.py
results/: vlm.txt
src/: __init__.py  run_logger.py
src/learning_agent/: PLAN.md  SPEAKER_NOTES.md  agent.py  knowledge.py  models.py  presentation.tex  test_pipeline.py  vision.py
src/monolithic_agent/: __init__.py  agent.py  synthesis.py  world_model.py
tests/: README.md  conftest.py
(+6153 files in other folders)
