[project]
name = "arc-agi-3-research"
version = "0.1.0"
description = "Research agents for ARC-AGI-3 world model synthesis"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "openai>=1.50",
    "pydantic>=2.0",
    "requests>=2.30",
    "flask>=3.1",
    "arc-agi>=0.9.6",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (require LLM endpoint)",
]

[tool.ruff.lint]
extend-select = ["I"]
